--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,8 @@
     "require": {
 		"php": ">=7.0",
         "tightenco/collect": "^5.7",
-        "symfony/dom-crawler": "^4.1",
-        "symfony/css-selector": "^4.1",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "symfony/dom-crawler": "^4.1"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*",
@@ -41,8 +40,7 @@
             "@phpcs-src",
             "@phpcs-test",
             "@phpmd",
-            "@phpunit-coverage",
-            "@phpunit-integration"
+            "@phpunit-coverage"
         ]
     }
 }
