--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
 		"php": ">=7.0",
         "tightenco/collect": "^5.7",
         "guzzlehttp/guzzle": "~6.0",
-        "symfony/dom-crawler": "^4.1"
+        "symfony/dom-crawler": "2.7.*"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*",
-        "symfony/var-dumper": "^4.1",
+        "symfony/var-dumper": "2.7.*",
         "squizlabs/php_codesniffer": "3.*",
         "phpmd/phpmd": "@stable"
     },
