--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"php": ">=7.0",
         "tightenco/collect": "^5.7",
         "guzzlehttp/guzzle": "~6.0",
-        "symfony/dom-crawler": "^4.1"
+        "symfony/dom-crawler": "2.7.*"
     },
     "require-dev": {
 		"phpunit/phpunit": "6.*",
